--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -17,7 +17,7 @@
         display: flex;
         align-items: center;
         font-size: 0.875rem;
-        line-height: 1.25;
+        line-height: 0.5;
         .crayons_story__author_pic {
           position: relative;
           margin-right: 0.5rem;
@@ -30,7 +30,29 @@
             height: 32px;
           }
         }
+        .dateandname {
+          .name {
+            color: #4d5760;
+            font-weight: 500;
+          }
+          .title {
+            font-size: 0.75rem;
+            color: #64707d;
+          }
+        }
       }
+    }
+  }
+  .crayons_story__indention{
+    padding-left: calc(2rem + 0.5rem); 
+        .crayons_story__title{
+      color: #08090a;
+      line-height: 1.25;
+      margin-bottom: 0.5rem;
+      font-size: 1.875rem;
+      overflow-wrap: break-word;
+      margin-top: 0;
+
     }
   }
 }
