--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -52,7 +52,9 @@
       font-size: 1.875rem;
       overflow-wrap: break-word;
       margin-top: 0;
-
+      .crayons_story__tags{
+        margin-bottom: 0.5rem;
+      }    
     }
   }
 }
