--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,60 +1,96 @@
 .container {
-  max-width: 650px;
+  width: 100%;
   height: auto;
   display: flex;
   margin: auto;
-  .postContainer {
-    width: 650px;
-    height: 222px;
-    border: solid 1px;
-    padding: 1rem;
-    .crayons_story__top {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 0.5rem;
-      .crayons_story__meta {
+  background-color: #f8f8f2;
+  position: relative;
+  .postsContainer{
+    margin: 20px auto;
+
+    .postContainer {
+      width: 630px;
+      height: 200px;
+      // border: solid 1px;
+      padding: 1rem;
+      box-sizing: border-box;
+      box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
+      margin-bottom: 10px;
+      border-radius: 5px;
+      background-color: #ffffff;
+      .crayons_story__top {
         display: flex;
         align-items: center;
-        font-size: 0.875rem;
-        line-height: 0.5;
-        .crayons_story__author_pic {
-          position: relative;
-          margin-right: 0.5rem;
-          .crayons_avatar {
-            display: inline-block;
-            border-radius: 100%;
+        justify-content: space-between;
+        margin-bottom: 0.5rem;
+        .crayons_story__meta {
+          display: flex;
+          align-items: center;
+          font-size: 0.875rem;
+          line-height: 0.5;
+          .crayons_story__author_pic {
             position: relative;
-            background-color: #64707d;
-            width: 32px;
-            height: 32px;
+            margin-right: 0.5rem;
+            .crayons_avatar {
+              display: inline-block;
+              border-radius: 100%;
+              position: relative;
+              background-color: #64707d;
+              width: 32px;
+              height: 32px;
+            }
           }
-        }
-        .dateandname {
-          .name {
-            color: #4d5760;
-            font-weight: 500;
-          }
-          .title {
-            font-size: 0.75rem;
-            color: #64707d;
+          .dateandname {
+            .name {
+              color: #4d5760;
+              font-weight: 500;
+            }
+            .title {
+              font-size: 0.75rem;
+              color: #64707d;
+            }
           }
         }
       }
     }
   }
+  
   .crayons_story__indention{
     padding-left: calc(2rem + 0.5rem); 
+    width: 600px;
+    height: 134px;
         .crayons_story__title{
       color: #08090a;
       line-height: 1.25;
       margin-bottom: 0.5rem;
-      font-size: 1.875rem;
+      font-size: 24px;
       overflow-wrap: break-word;
       margin-top: 0;
       .crayons_story__tags{
-        margin-bottom: 0.5rem;
+        margin-bottom: 0.8rem;
+        display: flex;
+        .crayons_tag{
+          font-size: 0.875rem;
+          color: #64707d;
+          line-height: 1.3;
+          margin-right: 10px;
+
+        }
       }    
+    }
+    .crayons_story__bottom{
+      display: flex;
+      font-size: 0.875rem;
+      .crayons_story__details{
+        display: flex;
+        font-size: 0.875rem;
+        margin-top: 10px;
+        
+        .crayons_btn{
+          color: #363d44;
+          margin-right: 10px;
+        }
+      }
     }
   }
 }
