--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,7 +8,7 @@
     margin: 50px auto;
 
     .postContainer {
-      width: 630px;
+      width: 700px;
       height: auto;
       // border: solid 1px;
       padding: 1rem;
@@ -51,33 +51,36 @@
           }
         }
       }
+      .crayons_story__indention{
+        padding-left: calc(2rem + 0.5rem); 
+        width: 600px;
+        height: auto;
+    
+            h3{
+          color: #08090a;
+          line-height: 1.50;
+          margin-bottom: 1.75rem;
+          font-size: 30px;
+          overflow-wrap: break-word;
+          margin-top: 0;
+        }
+        .crayons_story_tags{
+          margin-bottom: 0.8rem;
+          display: flex;
+          width: 100%;
+          .crayons_tag{
+            font-size: 0.875rem;
+            color: #64707d;
+            line-height: 1.3;
+            margin-right: 10px;
+    
+    
+          }
+
     }
   }
   
-  .crayons_story__indention{
-    padding-left: calc(2rem + 0.5rem); 
-    width: 600px;
-    height: 134px;
-        .crayons_story_title{
-      color: #08090a;
-      line-height: 1.25;
-      margin-bottom: 0.5rem;
-      font-size: 24px;
-      overflow-wrap: break-word;
-      margin-top: 0;
-    }
-    .crayons_story_tags{
-      margin-bottom: 0.8rem;
-      display: flex;
-      width: 100%;
-      .crayons_tag{
-        font-size: 0.875rem;
-        color: #64707d;
-        line-height: 1.3;
-        margin-right: 10px;
-
-
-      }
+  
     }    
     .crayons_story__bottom{
       display: flex;
