--- a/pages/articulo/id.module.scss
+++ b/pages/articulo/id.module.scss
@@ -9,6 +9,7 @@
     box-shadow: 0 0 0 1px rgba(8, 9, 10, 0.1);
     box-sizing: border-box;
     border-radius: 5px;
+    background-color: #ffffff;
     .cover_img {
       width: 100%;
       .crayons_article__cover__image {
