--- a/pages/articulo/id.module.scss
+++ b/pages/articulo/id.module.scss
@@ -10,6 +10,9 @@
     box-sizing: border-box;
     border-radius: 5px;
     background-color: #ffffff;
+    @media (max-width: 1024px){
+    width: auto;
+    }
     .cover_img {
       width: 100%;
       .crayons_article__cover__image {
