--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -86,6 +86,9 @@
             color: #64707d;
             line-height: 1.3;
             margin-right: 10px;
+            @media (max-width: 414px){
+              font-size: small;
+            }
     
     
           }
